Animation editors playhead not refreshing (maximized editor) #78229

Closed
opened 2020-06-24 23:21:08 +02:00 by CobraA · 7 comments

System Information
Windows 10 64 Bits.
Graphics card GeForce GTX 1080 Ti.

Blender Version
Broken: version: 2.90 Alpha hash: ba380fc0bf

Short description of error
the playhead stops working when you maximize the editors only the timeline is working.

Exact steps for others to reproduce the error

  • Factory settings.
  • Switch to any animation editor(Dopesheet, Graph editor,NLA...)
  • Hit play.
  • Ctrl+spacebar to maximize the editor.
  • The playhead stops, move the mouse cursor outside the editor and the playhead moves sporadically.
**System Information** Windows 10 64 Bits. Graphics card GeForce GTX 1080 Ti. **Blender Version** Broken: version: 2.90 Alpha hash: ba380fc0bf7b **Short description of error** the playhead stops working when you maximize the editors only the timeline is working. **Exact steps for others to reproduce the error** - Factory settings. - Switch to any animation editor(Dopesheet, Graph editor,NLA...) - Hit play. - Ctrl+spacebar to maximize the editor. - The playhead stops, move the mouse cursor outside the editor and the playhead moves sporadically.
Author

Added subscriber: @CobraA

Added subscriber: @CobraA
Member

Added subscribers: @Jeroen-Bakker, @lichtwerk

Added subscribers: @Jeroen-Bakker, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Jeroen Bakker was assigned by Philipp Oeser 2020-06-25 15:08:43 +02:00
Member

Can confirm.
@Jeroen-Bakker, assume this is due to your recent optimization?

Can confirm. @Jeroen-Bakker, assume this is due to your recent optimization?
Philipp Oeser changed title from Animation editors playhead bug. to Animation editors playhead not refreshing (maximized editor) 2020-06-25 15:09:06 +02:00
Member

Yes, this code needs some cleanup. What happens is that playback no areas needs to be redrawn, so it doesn't update the screen anymore. In normal circumstances there is always something that needs to be redrawn making the screen redrawn including the playhead overlay.

Yes, this code needs some cleanup. What happens is that playback no areas needs to be redrawn, so it doesn't update the screen anymore. In normal circumstances there is always something that needs to be redrawn making the screen redrawn including the playhead overlay.

This issue was referenced by 3b630bd563

This issue was referenced by 3b630bd563b65cb43fc2c3b61213d14ad68b8eb4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78229
No description provided.