Fix T78229: Playhead not refreshing when area is maximized

No other areas were tagged for redraw.