source/blender/editors/screen/screen_ops.c
@@ -4398,9 +4398,10 @@ static void screen_animation_region_tag_redraw(ScrArea *area,
     }
   }
 
+  /* No need to do a full redraw as the playhead is only updated. We do need to redraw when this
+   * area is in full screen as no other areas will be tagged for redrawing. */
   if ((region->regiontype == RGN_TYPE_WINDOW) &&
-      (ELEM(area->spacetype, SPACE_GRAPH, SPACE_NLA, SPACE_ACTION, SPACE_SEQ))) {
-    /* No need to do a full redraw as the playhead is only updated. */
+      (ELEM(area->spacetype, SPACE_GRAPH, SPACE_NLA, SPACE_ACTION, SPACE_SEQ)) && !area->full) {
     return;
   }
   ED_region_tag_redraw(region);
